Update Resources page

--- a/app/views/site_pages/resources.html.haml
+++ b/app/views/site_pages/resources.html.haml
@@ -22,6 +22,7 @@
             %h6= link_to "A Fox in Japan", "http://www.afoxinjapan.com"
             %h6= link_to "Let's Teach English", "http://www.letsteachenglish.com"
             %h6= link_to "Kumamoto JET Wiki", "http://kumamotojet.com/mw/index.php?title=Main_Page"
+            %h6= link_to "ALT(er)native teaching", "https://alternativeteaching.school.blog"
   .col-lg-6.col-sm-10.mb-2
     %h4.text-center Clip Art, Flash Cards, and teaching materials
     .card.box-shadow
@@ -32,6 +33,8 @@
             %p Japan's premiere clip art site. All pictures are 100% free, but you'll need to search in Japanese.
           %li.list-group-item
             %h6= link_to "Bingo Bongo Kids", "https://www.bingobongokids.com/"
+            %h6= link_to "iSL Collective", "https://en.islcollective.com"
+            %h6= link_to "FlatIcon", "https://www.flaticon.com/"
   .col-lg-6.col-sm-10.mb-2
     %h4.text-center Ideas and other resources
     .card.box-shadow
@@ -40,8 +43,6 @@
           %li.list-group-item
             %h5.card-title= link_to "Breaking News English", "https://breakingnewsenglish.com/", class: "card-link"
             %p This site takes recent world news articles and generates exercises based on them. Useful for students high school age or older.
-          %li.list-group-item
-            %h6= link_to "FlatIcon", "https://www.flaticon.com/"
   .col-lg-6.col-sm-10.mb-2
     %h4.text-center Living in Japan
     .card.box-shadow
