Add new logo and banner for the site and change primary color

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -103,8 +103,8 @@
 }
 
 // custom palette based on #05a2c7 as the primary color
-$altopedia_primary: #05a2c7;
-$altopedia_bright: #4fbad3;
+$altopedia_primary: #29abe1;
+$altopedia_bright: #20afea;
 $altopedia_dark: #025f74;
 .bg-primary { 
   background: linear-gradient(to right, $altopedia_primary, $altopedia_bright)
