Add a few more links in the Resources section

--- a/app/views/site_pages/resources.html.haml
+++ b/app/views/site_pages/resources.html.haml
@@ -35,6 +35,9 @@
             %h6= link_to "Bingo Bongo Kids", "https://www.bingobongokids.com/"
             %h6= link_to "iSL Collective", "https://en.islcollective.com"
             %h6= link_to "FlatIcon", "https://www.flaticon.com/"
+            %h6= link_to "Learn English Kids", "https://learnenglishkids.britishcouncil.org/worksheets"
+            %h6= link_to "TeachThis", "http://teachthis.com"
+            %h6= link_to "Teachers Pay Teachers", "https://teacherspayteachers.com"
   .col-lg-6.col-sm-10.mb-2
     %h4.text-center Ideas and other resources
     .card.box-shadow
