--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -33,9 +33,9 @@
         .col-sm-12.col-md-6
           = render partial: 'activities/compact_activity_list', locals: { label: t('.top-10-activities'), activity_list: @top10, show_upvote_count: true }
   .col-md-4.col-sm-12.secondary-content
-    .nagajob
-      = link_to image_tag("nagajob.jpg", class: "mw-100 rounded"), "http://www.nagajob.co.jp"
-      %p.mt-2= link_to "Level up your career in Japan! Register now and get the inside scoop on jobs in scenic Nagano!", "https://www.facebook.com/Nagajobrecruit/"
+    -# .nagajob
+    -#   = link_to image_tag("nagajob.jpg", class: "mw-100 rounded"), "http://www.nagajob.co.jp"
+    -#   %p.mt-2= link_to "Level up your career in Japan! Register now and get the inside scoop on jobs in scenic Nagano!", "https://www.facebook.com/Nagajobrecruit/"
     .signup-reminder
       .card.mt-2
         .card-body
