Update the About page

--- a/app/views/site_pages/about.html.haml
+++ b/app/views/site_pages/about.html.haml
@@ -1,12 +1,26 @@
 - provide(:title, "ALTopedia - About")
 
-%h3 About the site
+%h2.text-center.mt-2 About ALTopedia
 
 %p ALTopedia is the successor site to Englipedia.
 
-%p For about ten years, Englipedia was the premiere resource site for English teachers in Japan. Hundreds of teachers contributed their ideas and feedback, and it was the first place anyone sent new teachers when they needed to find something for their classes.
+%p For about ten years, Englipedia was the premiere classroom activity resource site for ALTs (Assistant Language Teachers) in Japan. Hundreds of teachers contributed their ideas and feedback, and it was the first place anyone sent new teachers when they needed to find activities for their classes.
 
-%p The administration passed hands several times over the years, and the site's final admin, Al, found that the platform the site was running on was being discontinued. He sent out an appeal for anyone to help him build a newer, modern site and that's when Jake got in touch with him. Since the foundations of the site were being completely rebuilt, it was renamed ALTopedia and launched in April of 2018.
+%p The administration passed hands several times over the years, and Englipedia's final admin, Al, found that the platform the site was running on was being discontinued. He sent out an appeal for anyone to help him build a newer, modern site and that's when Jake got in touch with him. Since the foundations of the site were being completely rebuilt, it was renamed ALTopedia and launched in April of 2018. Jake became the sole administrator in March 2020 and runs and develops the site today.
 
-%p In the spirit of education and sharing, the site is completely free. It's a custom-built web application designed for the needs of ALTs and other English teachers, and we're continually adding new features. Our goal from the start was to make a site that's easy to use and easy to contribute your ideas to. Many teachers have already signed up and shared their activities for anyone else who might find them useful. Let's put our heads together and make our English classes the best they can be!
+%p The site continues to help English teachers find games, activities, worksheets, and other materials for their classes. Many kind teachers have signed up and contributed their own creations. ALTopedia is entirely free to use, and respects its users time and privacy.
+
+%p On the technical end, ALTopedia is a custom web application built using the Ruby on Rails framework. It's not likely to win any beauty contests, but the goal is to be simple and functional. Jake needs to work on his graphic design skills, to put it mildly!
+
+%p I hope you find the site valuable! Have a look around and see what you can find!
+
+%p
+  %span Some of the site's longer-term goals:
+  %ul
+    %li Improving site search
+    %li Interface enhancements and perhaps a redesign at some point
+    %li Producing materials in other mediums - video, audio, or interactive activities
+    %li Articles and other longer written content
+
+%p= link_to "Please get in touch if you have any questions or concerns!", contact_path
 
