Add a new Guide page to the site

--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -42,6 +42,12 @@
           %h5 You can help!
           %p Do you have a good game or activity? Want to give some advice or kudos to an activity? Join up and help out!
           %p= link_to "Contribute to ALTopedia!", contribute_path
+    .guide-callout
+      .card.mt-2
+        .card-body
+          %h5 Check out the site guide!
+          %p Are you new to the site, or wondering how to find activities?
+          %p= link_to "The ALTopedia Guide", guide_path
     .comment-ticker
       .card.mt-2
         .card-body
