Update header and footer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -150,3 +150,10 @@ a:hover {
 	white-space: nowrap;
 	text-overflow: ellipsis;
 }
+
+// the social media logos in the footer
+.social-logo {
+	max-height: 65px;
+	max-width: 65px;
+}
+
