--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -21,11 +21,11 @@
           = link_to t('layouts.register-new-account'), new_user_registration_path, class: "nav-link"
       %li.nav-item.active
         = link_to t('layouts.contribute'), contribute_path, class: "nav-link"
-      %li.nav-item.active
-        = link_to t('layouts.job-listings'), jobs_path, class: "nav-link"
-      %li.nav-item.active
-        = link_to "ALTTO", altto_path, class: "nav-link"
-      %li.nav-item.active
+      -# %li.nav-item.active
+      -#   = link_to t('layouts.job-listings'), jobs_path, class: "nav-link"
+      -# %li.nav-item.active
+      -#   = link_to "ALTTO", altto_path, class: "nav-link"
+      -# %li.nav-item.active
         = link_to "Tag Search", search_path, class: "nav-link"
       - if user_signed_in?
         %li.nav-item.active
