--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,14 +1,17 @@
 %footer.container-fluid.p-4.mt-4
   .row
-    .col-md-4
+    .col-md-4.mb-2
       %h5.text-light ALTopedia
       %ul.list-unstyled.text-small
         %li= link_to t('layouts.about'), about_path, class: "text-light"
         %li= link_to t('layouts.contact'), contact_path, class: "text-light"
         %li= link_to t('layouts.contributors'), contributors_path, class: "text-light"
-        %li= link_to "Discord", "https://discord.gg/KTPmKJk", class: "text-light"
-        %li= link_to t('layouts.acknowledgements'), thanks_path, class: "text-light"
-    .col-md-4
+        -# %li= link_to t('layouts.acknowledgements'), thanks_path, class: "text-light"
+    .col-md-4.mb-2
+      %h5.text-light Community
+      =link_to image_tag("fb_logo.png", class: "social-logo mr-4"), "https://fb.me/altopedia.org"
+      =link_to image_tag("discord_logo.png", class: "social-logo"), "https://discord.gg/KTPmKJk"
+    .col-md-4.mb-2
       %h5.text-light= t('layouts.external-links')
       %ul.list-unstyled.text-small
         %li= link_to t('layouts.altto'), altto_path, class: "text-light"
