Revise Contact and Contribute pages, and fix one thing on the header

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -25,7 +25,7 @@
       -#   = link_to t('layouts.job-listings'), jobs_path, class: "nav-link"
       -# %li.nav-item.active
       -#   = link_to "ALTTO", altto_path, class: "nav-link"
-      -# %li.nav-item.active
+      %li.nav-item.active
         = link_to "Tag Search", search_path, class: "nav-link"
       - if user_signed_in?
         %li.nav-item.active
