--- a/app/views/site_pages/contact.html.haml
+++ b/app/views/site_pages/contact.html.haml
@@ -1,10 +1,13 @@
 -provide(:title, "ALTopedia - Contact")
 
-%h3 Contact ALTopedia
+%h2.text-center.mb-4 Contact ALTopedia
 
-%p Need to get in touch with us?
+%p Need to get in touch? Feel free to leave a comment on any relevant part of the site, or contact Jake directly.
 
-%ul
-  %li
-    %strong Jake
-    for technical issues and other general inquiries about the site: jake.alt.dev (AT) gmail.com
+%p
+  %strong E-mail:
+  %span jake.alt.dev (AT) gmail.com
+
+%p
+  %strong Discord
+  %span= link_to "ALTopedia Discord", "https://discord.gg/KTPmKJk"
