--- a/app/views/site_pages/contribute.html.haml
+++ b/app/views/site_pages/contribute.html.haml
@@ -16,7 +16,7 @@
 %h5= t('.grammar-heading')
 %p= t('.grammar-explanation')
 
-%h5= link_to t('.coding-heading'), "https://www.github.com/headbeeguy/alt-activities"
-%p= t('.coding-explanation')
+-# %h5= link_to t('.coding-heading'), "https://www.github.com/headbeeguy/alt-activities"
+-# %p= t('.coding-explanation')
 
 %p= t('.contact-text')
