--- a/app/views/front_page_posts/show.html.haml
+++ b/app/views/front_page_posts/show.html.haml
@@ -3,7 +3,7 @@
   <meta property="og:title" content="ALTopedia - #{@front_page_post.title}" />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="#{request.original_url}" />
-  <meta property="og:image" content="https://www.altopedia.org#{asset_path "logo.png"}" />
+  <meta property="og:image" content="https://www.altopedia.org#{asset_path "logo with background.png"}" />
   <meta property="og:description" content="#{@front_page_post.excerpt}" />
   <meta property="og:site_name" content="ALTopedia" />
 
