--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,7 @@
     %meta{:name => "viewport", :content => "width=device-width, initial-scale=1, shrink-to-fit=no"}
     = content_for?(:head) ? yield(:head) : ''
     <script src='https://www.google.com/recaptcha/api.js'></script>
+    = favicon_link_tag asset_path('favicon.ico')
   %body.bg-light
     .site-header
       = render 'layouts/header' 
