Update header and footer

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -21,6 +21,8 @@
           = link_to t('layouts.register-new-account'), new_user_registration_path, class: "nav-link"
       %li.nav-item.active
         = link_to t('layouts.contribute'), contribute_path, class: "nav-link"
+      %li.nav-item.active
+        = link_to "Guide", guide_path, class: "nav-link"
       -# %li.nav-item.active
       -#   = link_to t('layouts.job-listings'), jobs_path, class: "nav-link"
       -# %li.nav-item.active
