--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -14,5 +14,5 @@
     .col-md-4.mb-2
       %h5.text-light= t('layouts.external-links')
       %ul.list-unstyled.text-small
-        %li= link_to t('layouts.altto'), altto_path, class: "text-light"
+        -# %li= link_to t('layouts.altto'), altto_path, class: "text-light"
         %li= link_to t('layouts.resources'), resources_path, class: "text-light"
