Add a simpler name column to Tags and begin phasing out short_name and long_name

--- a/app/views/tags/index.html.haml
+++ b/app/views/tags/index.html.haml
@@ -2,4 +2,4 @@
 
 .list-group
   - @tags.each do |tag|
-    = link_to "#{tag.short_name} - #{tag.description}", tag, class: "list-group-item list-group-action-item"
+    = link_to "#{tag.name} - #{tag.description}", tag, class: "list-group-item list-group-action-item"
