--- a/app/views/tags/show.html.haml
+++ b/app/views/tags/show.html.haml
@@ -1,6 +1,6 @@
-- provide(:title, t('.show-tag-title', tag_name: @tag.long_name) )
+- provide(:title, t('.show-tag-title', tag_name: @tag.name) )
 - content_for :head do
-  <meta property="og:title" content="ALTopedia - #{@tag.long_name}" />
+  <meta property="og:title" content="ALTopedia - #{@tag.name}" />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="#{request.original_url}" />
   <meta property="og:image" content="https://www.altopedia.org#{asset_path "logo with background.png"}" />
@@ -9,7 +9,7 @@
 
 .row
   .col-sm-10.col-md-8.col-lg-8
-    %h3= @tag.long_name
+    %h3= @tag.name
     %p= link_to "#{@tag.tag_category.name}", @tag.tag_category
 
     %p= markdown( t('.description', tag_description: @tag.description) )
