--- a/app/views/site_pages/themes.html.haml
+++ b/app/views/site_pages/themes.html.haml
@@ -6,7 +6,7 @@
   - @theme_tags.each do |tag|
     .card.col-sm-8.col-md-6.col-lg-3
       .card-body
-        %span.font-weight-bold= link_to tag.long_name, tag
+        %span.font-weight-bold= link_to tag.name, tag
 
 %h3.mt-3= t('.holidays')
 
@@ -14,4 +14,4 @@
   - @holiday_tags.each do |tag|
     .card.col-sm-8.col-md-6.col-lg-3
       .card-body
-        %span.font-weight-bold= link_to tag.long_name, tag
+        %span.font-weight-bold= link_to tag.name, tag
