--- a/app/views/taggings/_activity_tagging_list.html.haml
+++ b/app/views/taggings/_activity_tagging_list.html.haml
@@ -2,4 +2,4 @@
   %small= t('.remove-tagging')
   - @activity_taggings.each do |tagging|
     = form_for( tagging, html: { method: :delete }, remote: true) do |f|
-      = f.submit "#{tagging.tag.long_name} (delete)", class: "btn btn-danger btn-sm badge-danger"
+      = f.submit "#{tagging.tag.name} (delete)", class: "btn btn-danger btn-sm badge-danger"
