--- a/app/views/textbook_pages/_form.html.haml
+++ b/app/views/textbook_pages/_form.html.haml
@@ -6,6 +6,6 @@
         = f.collection_select :textbook_id, @textbooks, :id, :name, {}, class: 'form-control'
         = f.text_field :page, placeholder: "Page number", class: 'form-control'
         = f.text_field :description, placeholder: "Description", class: 'form-control'
-        = f.collection_select :tag_id, @tags, :id, :long_name, {}, class: 'form-control'
+        = f.collection_select :tag_id, @tags, :id, :name, {}, class: 'form-control'
         = f.submit "Submit", class: "btn btn-primary"
 
