--- a/app/views/textbook_pages/show.html.haml
+++ b/app/views/textbook_pages/show.html.haml
@@ -6,7 +6,7 @@
 
 %p= link_to "Textbook: #{@textbook_page.textbook.name}", @textbook_page.textbook
 %p Page #  #{@textbook_page.page} - #{markdown(@textbook_page.description)}
-%p= link_to "Grammar point: #{@textbook_page.tag.long_name}", @textbook_page.tag
+%p= link_to "Grammar point: #{@textbook_page.tag.name}", @textbook_page.tag
 
 -if policy(@textbook_page).edit?
   %p= link_to "Edit", edit_textbook_page_path(@textbook_page)
