Add activity and user count to the mod queue page

--- a/app/views/site_pages/modqueue.html.haml
+++ b/app/views/site_pages/modqueue.html.haml
@@ -79,3 +79,6 @@
           %span ->
           %span= link_to upvote.activity.name, upvote.activity
 
+  .col-sm-10.col-lg-4
+    %h4 Stats
+    %p #{@activity_count} activities, #{@user_count} users
