Update references to the .org site to .net

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -9,7 +9,7 @@
         -# %li= link_to t('layouts.acknowledgements'), thanks_path, class: "text-light"
     .col-md-4.mb-2
       %h5.text-light Community
-      =link_to image_tag("fb_logo.png", class: "social-logo mr-4"), "https://fb.me/altopedia.org"
+      =link_to image_tag("fb_logo.png", class: "social-logo mr-4"), "https://fb.me/altopedia.net"
       =link_to image_tag("discord_logo.png", class: "social-logo"), "https://discord.gg/KTPmKJk"
     .col-md-4.mb-2
       %h5.text-light= t('layouts.external-links')
