--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -37,9 +37,9 @@
         = text_field_tag :search
         = submit_tag "Search", class: "btn btn-primary"
       -# - if I18n.locale == :ja
-      -#   %li.nav-item= link_to "English", "https://en.altopedia.org", class: "nav-link"
+      -#   %li.nav-item= link_to "English", "https://en.altopedia.net", class: "nav-link"
       -# - elsif I18n.locale == :en
-      -#   %li.nav-item= link_to "日本語", "https://ja.altopedia.org", class: "nav-link"
+      -#   %li.nav-item= link_to "日本語", "https://ja.altopedia.net", class: "nav-link"
 .nav-scroller.bg-white.box-shadow
   %nav.nav.nav-underline
     = link_to t('layouts.textbook_listing'), textbooks_path, class: "nav-link active"
