--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -3,7 +3,7 @@
   <meta property="og:title" content="ALTopedia" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="#{request.original_url}" />
-  <meta property="og:image" content="https://www.altopedia.org#{asset_path "logo with background.png"}" />
+  <meta property="og:image" content="https://www.altopedia.net#{asset_path "logo with background.png"}" />
   <meta property="og:description" content="Find activities, games, and worksheets to use in your English classes. Share your ideas and help your fellow teachers make their classes awesome!" />
   <meta property="og:site_name" content="ALTopedia" />
 
