--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -3,7 +3,7 @@
   <meta property="og:title" content="#{@activity.name}" />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="#{request.original_url}" />
-  <meta property="og:image" content="https://www.altopedia.org#{asset_path "logo with background.png"}" />
+  <meta property="og:image" content="https://www.altopedia.net#{asset_path "logo with background.png"}" />
   <meta property="og:description" content="#{@activity.short_description}" />
   <meta property="og:site_name" content="ALTopedia" />
 
