--- a/app/views/site_pages/online_teaching.html.haml
+++ b/app/views/site_pages/online_teaching.html.haml
@@ -5,16 +5,14 @@
 %p Teaching online can be quite an adjustment if you're used to classroom teaching, but there are also some neat things you can do when everyone is using a screen. If you know of anything useful, please get in touch on the Contact page!
 .row
   .col-sm-11.col-lg-6
-    %h4 Tools and sites
+    %h4 Tools
     %ul
       %li
         %span= link_to "Wheel Decide", "https://www.wheeldecide.com"
         %span - This site lets you make a spinning wheel that randomly chooses one item. Good for choosing warm-up questions or picking a student at random.
-    %ul
       %li
         %span= link_to "Wheel of Names", "https://wheelofnames.com"
         %span - Similar to Wheel Decide, but with a little more fanfare.
-    %ul
       %li
         %span= link_to "Kahoot", "https://kahoot.com"
         %span - A popular site that lets you make real-time quiz games. Each student needs their own computer or tablet.
@@ -24,3 +22,6 @@
       %li
         %span= link_to "ESL Games", "https://eslgames.com/teaching-online/"
         %span - This site has a lot of web-based activities like an automatic sentence scrambler that you can send to students as links. There's also a great collection of links to other sites with their own activities.
+      %li
+        %span= link_to "Ben Kuhn's video call guide", "https://www.benkuhn.net/vc/"
+        %span - An excellent guide for techniques, equipment, and best practices for video calls.
