--- a/app/views/site_pages/about.html.haml
+++ b/app/views/site_pages/about.html.haml
@@ -6,21 +6,13 @@
 
 %p For about ten years, Englipedia was the premiere classroom activity resource site for ALTs (Assistant Language Teachers) in Japan. Hundreds of teachers contributed their ideas and feedback, and it was the first place anyone sent new teachers when they needed to find activities for their classes.
 
-%p The administration passed hands several times over the years, and Englipedia's final admin, Al, found that the platform the site was running on was being discontinued. He sent out an appeal for anyone to help him build a newer, modern site and that's when Jake got in touch with him. Since the foundations of the site were being completely rebuilt, it was renamed ALTopedia and launched in April of 2018. Jake became the sole administrator in March 2020 and runs and develops the site today.
+%p The administration passed hands several times over the years, and Englipedia's final admin, Al, found that the platform the site was running on was being discontinued. He sent out an appeal for anyone to help him build a newer, modern site and that's when Jake got in touch with him. Since the foundations of the site were being completely rebuilt, it was renamed ALTopedia and launched in April of 2018. Jake became the sole administrator in March 2020 and runs, develops, and moderates the site today.
 
-%p The site continues to help English teachers find games, activities, worksheets, and other materials for their classes. Many kind teachers have signed up and contributed their own creations. ALTopedia is entirely free to use, and respects its users time and privacy.
+%p The site continues to help English teachers in Japan find games, activities, worksheets, and other materials for their classes. Many kind teachers have signed up and contributed their own creations. ALTopedia is entirely free to use and join. The site deliberately doesn't have any advertising, full-screen pop-ups, or other annoyances of the modern web. The site is independently owned and operated by Jake, and the only priority is to serve the users as well as possible.
 
-%p On the technical end, ALTopedia is a custom web application built using the Ruby on Rails framework. It's not likely to win any beauty contests, but the goal is to be simple and functional. Jake needs to work on his graphic design skills, to put it mildly!
+%p The current long-term development plans are to improve the site's interface and search functionality. Later in the fall, it will be possible to help the site out with financial contributions, but this will be completely voluntary.
 
-%p I hope you find the site valuable! Have a look around and see what you can find!
-
-%p
-  %span Some of the site's longer-term goals:
-  %ul
-    %li Improving site search
-    %li Interface enhancements and perhaps a redesign at some point
-    %li Producing materials in other mediums - video, audio, or interactive activities
-    %li Articles and other longer written content
+%p Please take a look around and see what you can find!
 
 %p= link_to "Please get in touch if you have any questions or concerns!", contact_path
 
