--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -33,21 +33,15 @@
         .col-sm-12.col-md-6
           = render partial: 'activities/compact_activity_list', locals: { label: t('.top-10-activities'), activity_list: @top10, show_upvote_count: true }
   .col-md-4.col-sm-12.secondary-content
-    -# .nagajob
-    -#   = link_to image_tag("nagajob.jpg", class: "mw-100 rounded"), "http://www.nagajob.co.jp"
-    -#   %p.mt-2= link_to "Level up your career in Japan! Register now and get the inside scoop on jobs in scenic Nagano!", "https://www.facebook.com/Nagajobrecruit/"
-    .survey-callout
+    .signup-reminder
       .card.mt-2
         .card-body
-          %h5 Site survey
-          %p Do you have 5 to 10 minutes? The site is doing a user survey to help determine what gets worked on next. Please check it out!
-          %p= link_to "ALTopedia fall survey", "https://forms.gle/DUHs8HeNjL5W6t7c9"
-    -# .signup-reminder
-    -#   .card.mt-2
-    -#     .card-body
-    -#       %h5 You can help!
-    -#       %p Do you have a good game or activity? Want to give some advice or kudos to an activity? Join up and help out!
-    -#       %p= link_to "Contribute to ALTopedia!", contribute_path
+          %h5 You can help!
+          %p Do you have a good game or activity you'd like to share? Want to give some advice or thank someone for their activity?
+          %p
+            %span= link_to "Contribute to ALTopedia", contribute_path
+            %span or
+            %span= link_to "sign up!", new_user_path
     .guide-callout
       .card.mt-2
         .card-body
