--- a/app/views/site_pages/resources.html.haml
+++ b/app/views/site_pages/resources.html.haml
@@ -1,6 +1,6 @@
 -provide(:title, t('.title'))
 
-%h2= t('.page-header')
+%h2.text-center= t('.page-header')
 
 %p= t('.page-explanation')
 
@@ -18,7 +18,6 @@
             %h6= link_to "Kobe JET", "https://www.kobejet.com"
             %h6= link_to "ALT Wiki", "https://www.altwiki.net"
             %h6= link_to "English Web Book", "http://www.englishwebbook.com"
-            %h6= link_to "Eigo Ganbare", "https://eigoganbare.com"
             %h6= link_to "A Fox in Japan", "http://www.afoxinjapan.com"
             %h6= link_to "Let's Teach English", "http://www.letsteachenglish.com"
             %h6= link_to "Kumamoto JET Wiki", "http://kumamotojet.com/mw/index.php?title=Main_Page"
@@ -32,20 +31,16 @@
             %h5.card-title= link_to "Irasutoya", "https://www.irasutoya.com", class: "card-link"
             %p Japan's premiere clip art site. All pictures are 100% free, but you'll need to search in Japanese.
           %li.list-group-item
+            %h5.card-title= link_to "Breaking News English", "https://breakingnewsenglish.com/", class: "card-link"
+            %p This site takes recent world news articles and generates exercises based on them. Useful for students high school age or older.
+          %li.list-group-item
             %h6= link_to "Bingo Bongo Kids", "https://www.bingobongokids.com/"
             %h6= link_to "iSL Collective", "https://en.islcollective.com"
             %h6= link_to "FlatIcon", "https://www.flaticon.com/"
             %h6= link_to "Learn English Kids", "https://learnenglishkids.britishcouncil.org/worksheets"
             %h6= link_to "TeachThis", "http://teachthis.com"
             %h6= link_to "Teachers Pay Teachers", "https://teacherspayteachers.com"
-  .col-lg-6.col-sm-10.mb-2
-    %h4.text-center Ideas and other resources
-    .card.box-shadow
-      .card-body
-        %ul.list-group.list-group-flush
-          %li.list-group-item
-            %h5.card-title= link_to "Breaking News English", "https://breakingnewsenglish.com/", class: "card-link"
-            %p This site takes recent world news articles and generates exercises based on them. Useful for students high school age or older.
+            %h6= link_to "One Stop English", "https://www.onestopenglish.com"
   .col-lg-6.col-sm-10.mb-2
     %h4.text-center Living in Japan
     .card.box-shadow
