Halloween-ify the front page

--- a/app/views/site_pages/_tag_of_the_moment.html.haml
+++ b/app/views/site_pages/_tag_of_the_moment.html.haml
@@ -1,4 +1,5 @@
 .card.mt-2
   .card-body
-    %h5= t('.called-out-tag')
-    %h6.text-center= link_to "Holiday - Halloween", tag_path(52), class: "text-center btn btn-success"
+    %h5 Trick or treat!
+    %p Looking for Halloween activities?
+    %h6.text-center= link_to "The Halloween tag", tag_path(52), class: "text-center btn btn-success"
