--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -34,6 +34,14 @@
           = render partial: 'activities/compact_activity_list', locals: { label: t('.top-10-activities'), activity_list: @top10, show_upvote_count: true }
   .col-md-4.col-sm-12.secondary-content
     = render 'tag_of_the_moment'
+    .crowdfunding
+      .card.mt-2
+        .card-body
+          %h5 Help keep the site running!
+          %p ALTopedia is ad-free and independent. You can now help pay for the server costs, if you like:
+          %h5= link_to "Patreon", "https://www.patreon.com/altopedia"
+          %h5= link_to "Ko-fi", "https://www.ko-fi.com/altopedia"
+          %p This is voluntary, of course, but greatly appreciated!
     -# .signup-reminder
     -#   .card.mt-2
     -#     .card-body
