Update the Resources page

--- a/app/views/site_pages/resources.html.haml
+++ b/app/views/site_pages/resources.html.haml
@@ -22,6 +22,7 @@
             %h6= link_to "Let's Teach English", "http://www.letsteachenglish.com"
             %h6= link_to "Kumamoto JET Wiki", "http://kumamotojet.com/mw/index.php?title=Main_Page"
             %h6= link_to "ALT(er)native teaching", "https://alternativeteaching.school.blog"
+            %h6= link_to "Jenerally Jen", "https://jenerallyjen.wordpress.com/"
   .col-lg-6.col-sm-10.mb-2
     %h4.text-center Clip Art, Flash Cards, and teaching materials
     .card.box-shadow
@@ -40,7 +41,7 @@
             %h6= link_to "Learn English Kids", "https://learnenglishkids.britishcouncil.org/worksheets"
             %h6= link_to "TeachThis", "http://teachthis.com"
             %h6= link_to "Teachers Pay Teachers", "https://teacherspayteachers.com"
-            %h6= link_to "One Stop English", "https://www.onestopenglish.com"
+            %h6= link_to "English Grammar Online", "https://www.ego4u.com/en/cram-up/grammar"
   .col-lg-6.col-sm-10.mb-2
     %h4.text-center Living in Japan
     .card.box-shadow
